--- a/ClientApp/Views/SettingsPage.xaml
+++ b/ClientApp/Views/SettingsPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <Grid Padding="24">
         <TextBlock>Settings</TextBlock>
     </Grid>
 </Page>
