--- a/ClientApp/App.xaml
+++ b/ClientApp/App.xaml
@@ -43,10 +43,11 @@
             
             <!--Acryl-->
 
-            <AcrylicBrush x:Key="NavigationViewDefaultPaneBackground" BackgroundSource="Backdrop" TintColor="{ThemeResource SystemAccentColor}" TintOpacity=".6" Opacity="1"/>
-            <AcrylicBrush x:Key="NavigationViewExpandedPaneBackground" BackgroundSource="HostBackdrop" TintColor="{ThemeResource SystemAccentColor}" TintOpacity=".3" Opacity=".7"/>
+            <AcrylicBrush x:Key="NavigationViewDefaultPaneBackground" BackgroundSource="Backdrop"  TintColor="{ThemeResource SystemAccentColor}" TintOpacity=".6" Opacity="1" FallbackColor="{ThemeResource SystemAccentColor}"/>
 
-            <AcrylicBrush x:Key="MiddlePaneBackground" BackgroundSource="HostBackdrop" TintColor="{ThemeResource SystemAccentColor}" TintOpacity=".2" Opacity=".4"/>
+            <AcrylicBrush x:Key="NavigationViewExpandedPaneBackground" BackgroundSource="HostBackdrop" TintColor="{ThemeResource SystemAccentColor}" TintOpacity=".3" Opacity=".7" FallbackColor="{ThemeResource SystemAccentColor}"/>
+
+            <AcrylicBrush x:Key="MiddlePaneBackground" BackgroundSource="HostBackdrop" TintColor="{ThemeResource SystemAccentColor}" TintOpacity=".2" Opacity=".4" FallbackColor="LightGray"/>
 
         </ResourceDictionary>
     </Application.Resources>
