--- a/ClientApp/App.xaml
+++ b/ClientApp/App.xaml
@@ -2,8 +2,7 @@
     x:Class="ClientApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ClientApp"
-    RequestedTheme="Light">
+    xmlns:local="using:ClientApp">
 
     <Application.Resources>
         <ResourceDictionary>
