--- a/ClientApp/Views/OwnedDetailPage.xaml
+++ b/ClientApp/Views/OwnedDetailPage.xaml
@@ -37,7 +37,7 @@
                         <!-- has to be generated from http request, optional image is possible-->
                         <Image Source="Assets/placeholder.png" Width="44" Height="44"
                        HorizontalAlignment="Left"/>
-                        <TextBlock Text="{x:Bind }" Foreground="Black"
+                        <TextBlock Text="{x:Bind }" 
                            FontSize="15" Grid.Column="1"
                            VerticalAlignment="Center"
                            Padding="0,0,54,0"/>
